[package]
name = "cart_prod"
version = "0.1.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv
description = "Cartesian product of iterators."
documentation = "https://docs.rs/cart_prod"
readme = "README.md"
repository = "https://github.com/JohnScience/cart_prod"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["cartesian", "product", "iterators"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"] # https://crates.io/category_slugs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
